--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ plotly==5.24.1
 prompt_toolkit==3.0.48
 protobuf==5.29.2
 psutil==6.1.1
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
